--- a/productivity.html
+++ b/productivity.html
@@ -213,14 +213,27 @@
                             <span class="productivity-music-name">Knowing Yourself</span>
                             <!-- <span class="audio-duration audio-duration1 tm-view"></span> -->
                             </div>
-                            <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                            <!-- <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/> -->
+                            <div class="audio-progress banner-audio-beats last" style="height: 5px; background: #ccc;border-radius: 50px">
+                                <div class="audio-progress-inner" style="height: 100%; background: salmon; width: 0%;"></div>
+                            </div>
                             <div class="track-fav-more-wrap">
                                 <span class="audio-duration audio-duration1">00:00</span>
                                 <label for="fav-check1" class="fav-wrapper">
                                     <input type="checkbox" id="fav-check1" class="fav-input"/>
                                     <i class="fa-solid fa-heart"></i>
                                 </label>
-                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                                <!-- <i class="fa-solid fa-ellipsis-vertical"></i> -->
+                                <div class="dropdown">
+                                    <a class="audio-dropdown dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
                             </div>
                             <button type="button" class="btn btn-pdf">
                                 <span>READ PDF</span>
@@ -241,14 +254,27 @@
                                     <span class="productivity-music-name">Self-Esteem</span>
                                     <!-- <span class="audio-duration audio-duration2 tm-view"></span> -->
                                 </div>
-                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <!-- <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/> -->
+                                <div class="audio-progress banner-audio-beats last" style="height: 5px; background: #ccc;border-radius: 50px">
+                                    <div class="audio-progress-inner" style="height: 100%; background: salmon; width: 0%;"></div>
+                                </div>
                                 <div class="track-fav-more-wrap">
                                     <span class="audio-duration audio-duration2">00:00</span>
                                     <label for="fav-check2" class="fav-wrapper">
                                         <input type="checkbox" id="fav-check2" class="fav-input"/>
                                         <i class="fa-solid fa-heart"></i>
                                     </label>
-                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    <!-- <i class="fa-solid fa-ellipsis-vertical"></i> -->
+                                    <div class="dropdown">
+                                        <a class="audio-dropdown dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Action</a></li>
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <button type="button" class="btn btn-pdf">
                                     <span>READ PDF</span>
@@ -268,14 +294,27 @@
                                     <span class="productivity-music-name">Emotional Management</span>
                                     <!-- <span class="audio-duration audio-duration3 tm-view"></span> -->
                                 </div>
-                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <!-- <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/> -->
+                                <div class="audio-progress banner-audio-beats last" style="height: 5px; background: #ccc;border-radius: 50px">
+                                    <div class="audio-progress-inner" style="height: 100%; background: salmon; width: 0%;"></div>
+                                </div>
                                 <div class="track-fav-more-wrap">
                                     <span class="audio-duration audio-duration3">00:00</span>
                                     <label for="fav-check3" class="fav-wrapper">
                                         <input type="checkbox" id="fav-check3" class="fav-input"/>
                                         <i class="fa-solid fa-heart"></i>
                                     </label>
-                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    <!-- <i class="fa-solid fa-ellipsis-vertical"></i> -->
+                                    <div class="dropdown">
+                                        <a class="audio-dropdown dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Action</a></li>
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <button type="button" class="btn btn-pdf">
                                     <span>READ PDF</span>
@@ -295,14 +334,27 @@
                                     <span class="productivity-music-name">Eating Right & Nutrition (1)</span>
                                     <!-- <span class="audio-duration audio-duration4 tm-view"></span> -->
                                 </div>
-                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <!-- <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/> -->
+                                <div class="audio-progress banner-audio-beats last" style="height: 5px; background: #ccc;border-radius: 50px">
+                                    <div class="audio-progress-inner" style="height: 100%; background: salmon; width: 0%;"></div>
+                                </div>
                                 <div class="track-fav-more-wrap">
                                     <span class="audio-duration audio-duration4">00:00</span>
                                     <label for="fav-check4" class="fav-wrapper">
                                         <input type="checkbox" id="fav-check4" class="fav-input"/>
                                         <i class="fa-solid fa-heart"></i>
                                     </label>
-                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    <!-- <i class="fa-solid fa-ellipsis-vertical"></i> -->
+                                    <div class="dropdown">
+                                        <a class="audio-dropdown dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Action</a></li>
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <button type="button" class="btn btn-pdf">
                                     <span>READ PDF</span>
@@ -322,14 +374,27 @@
                                     <span class="productivity-music-name">Exercise for Men</span>
                                     <!-- <span class="audio-duration audio-duration5 tm-view"></span> -->
                                 </div>
-                                <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/>
+                                <!-- <img src="img/banner-audio.png" class="img-fluid banner-audio-beats"/> -->
+                                <div class="audio-progress banner-audio-beats last" style="height: 5px; background: #ccc;border-radius: 50px">
+                                    <div class="audio-progress-inner" style="height: 100%; background: salmon; width: 0%;"></div>
+                                </div>
                                 <div class="track-fav-more-wrap">
                                     <span class="audio-duration audio-duration5">00:00</span>
                                     <label for="fav-check5" class="fav-wrapper">
                                         <input type="checkbox" id="fav-check5" class="fav-input"/>
                                         <i class="fa-solid fa-heart"></i>
                                     </label>
-                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    <!-- <i class="fa-solid fa-ellipsis-vertical"></i> -->
+                                    <div class="dropdown">
+                                        <a class="audio-dropdown dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Action</a></li>
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <button type="button" class="btn btn-pdf">
                                     <span>READ PDF</span>
@@ -422,6 +487,7 @@
         $(document).on("click",".audio-play-btn", function () {
             // var audio = document.getElementById('banner-audio');
             var audio = $(this).next()[0];
+            // console.log($(this).prev())
             if($(this).hasClass('is-playing')){
                 // this.className = "";
                 $(this).removeClass('is-playing')
@@ -449,6 +515,22 @@
                 // $('.audio-duration1').text(tt+Amin+":"+Asec);
                 var audioDuration = $(this).parent().parent().find('.audio-duration')
                 audioDuration.text(tt+Amin+":"+Asec);
+                
+
+                // Progress bar
+                var progressBar = $(this).parent().parent().find('.audio-progress .audio-progress-inner');
+                var totalTime = Math.floor(audio.currentTime / audio.duration * 100)
+                $(progressBar).css("width", totalTime + "%");
+
+                // Add Play Button
+                if(totalTime === 100){
+                    var playPauseButton = $(this).prev();
+                    playPauseButton.removeClass('is-playing')
+                    if(playPauseButton.children().hasClass('fa-circle-pause')){
+                        playPauseButton.children().addClass('fa-circle-play')
+                        playPauseButton.children().removeClass('fa-circle-pause')
+                    }
+                }
                 
                 // console.log($(this).parent().parent().find('.audio-duration')[0])
             });
